syntax = "proto3";

package heron.proto.system;

option java_package = "com.twitter.heron.proto.system";
option java_outer_classname = "Metrics";

import "common.proto";
import "tmaster.proto";

// This file defines the various protocol buffers needed
// for sending metrics from all the system components(workers,
// (stmgrs, tmasters). The components first register themselves
// with MetricPublisherRegisterRequest. And then everytime
// they want to send a metric, they use the 
// MetricPublisherPublishMessage to send out the actual message

message MetricDatum {
  string name = 1;
  string value = 2;
}

message ExceptionData {
  // Stack trace of exception. First two lines of stack trace is used for aggregating exception.
  string stacktrace = 1;

  // Last time the exception occurred in the metrics collection interval
  string lasttime = 2;

  // First time the exception occurred in the metrics collection interval
  string firsttime = 3;

  // Number of time exception occurred in the metrics collection interval
  int32 count = 4;

  // Additional text logged.
  string logging = 5;
}

message MetricPublisher {

  // Name of the host
  string hostname = 1;

  // Port to publish to
  int32 port = 2;

  // like Tail-FlatMap or __stmgr__
  string component_name = 3;

  // In case of regular instances, it is their instance_id
  // For stmgr, it is the stmgr id
  string instance_id = 4;

  // The index of the instance with respect
  // to that component_name
  int32 instance_index = 5;
}

message MetricPublisherRegisterRequest {
  MetricPublisher publisher = 1;
}

message MetricPublisherRegisterResponse {
  Status status = 1;
}

message MetricPublisherPublishMessage {
  repeated MetricDatum metrics = 1;
  repeated ExceptionData exceptions = 2;
}


// This is the tmaster location refresh message sent 
// by the stmgrs to the metricsmgrs
message TMasterLocationRefreshMessage {
  heron.proto.tmaster.TMasterLocation tmaster = 1;
}
